--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'java-library-distribution'
 
 group = 'io.elastic'
 version = '0.0.1-SNAPSHOT'
