Added Spock tests

--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'groovy'
 apply plugin: 'idea'
 apply plugin: 'java-library-distribution'
 
@@ -14,6 +15,8 @@ repositories {
 
 dependencies {
     compile "com.google.code.gson:gson:2.2.4"
+    testRuntime "org.codehaus.groovy:groovy-all:2.1.5"
+    testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
 }
 
 uploadArchives {
