--- a/build.gradle
+++ b/build.gradle
@@ -44,17 +44,21 @@ publishing {
     }
 }
 
-bintray {
-    user = bintrayUser //this usually comes form gradle.properties file in ~/.gradle
-    key = bintrayKey //this usually comes form gradle.properties file in ~/.gradle
-    publications = ['mavenJava'] // see publications closure
-    pkg { //package will be created if does not exist
-        repo = 'maven'
+if (project.hasProperty('bintrayUser') && project.hasProperty('bintrayKey')) {
+    bintray {
+        user = bintrayUser //this usually comes form gradle.properties file in ~/.gradle
+        key = bintrayKey //this usually comes form gradle.properties file in ~/.gradle
+        publications = ['mavenJava'] // see publications closure
+        pkg { //package will be created if does not exist
+            repo = 'maven'
 //            userOrg = 'myorg' // an optional organization name when the repo belongs to one of the user's orgs
-        name = 'java-api'
-        licenses = ['Apache-2.0']
+            name = 'java-api'
+            licenses = ['Apache-2.0']
+        }
     }
 }
+
+
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.0'
