--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'maven-publish'
 apply plugin: 'bintray'
 
 group = 'io.elastic'
-version = '0.0.2-SNAPSHOT'
+version = '0.0.1'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
