--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'groovy'
+apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'java-library-distribution'
 apply plugin: 'maven-publish'
