--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ repositories {
 
 dependencies {
     compile "com.google.code.gson:gson:2.2.4"
+    compile "ch.qos.logback:logback-classic:1.1.2"
     testRuntime "org.codehaus.groovy:groovy-all:2.0.5"
     testCompile "org.spockframework:spock-core:0.7-groovy-2.0"
 }
