--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 
 group = 'io.elastic'
-version = '1.0.0-SNAPSHOT'
+version = '2.0.0-SNAPSHOT'
 ext.isReleaseVersion = !version.endsWith("SNAPSHOT")
 
 sourceCompatibility = 1.8
@@ -20,6 +20,7 @@ signing {
 
 repositories {
     mavenCentral()
+    mavenLocal()
 }
 
 dependencies {
