--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,16 @@
 version: 2
 jobs:
   build:
-    
-    working_directory: ~/java-api
-
     docker:
       - image: circleci/openjdk:8
-
     steps:
-
       - checkout
-      
       - run: export TERM=${TERM:-dumb} && ./gradlew build --refresh-dependencies uploadArchives -PsonatypeUsername=$SONATYPE_USERNAME -PsonatypePassword=$SONATYPE_PASSWORD
-      
       - store_test_results:
           path: build/reports
+
+workflows:
+  version: 2
+  build_test_upload:
+    jobs:
+      - build
