--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,9 @@ signing {
 }
 
 repositories {
-    mavenCentral()
+    maven {
+        url "https://repo1.maven.org/maven2"
+    }
     mavenLocal()
 }
 
